# digiLocker_mod

./: .cache_ggshield  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Dockerfile-dev  Makefile  Procfile  README.md  app.py  app2.py  config.js  config.py  digilocker-deployment.yaml  digilocker-service.yaml  digilocker.yaml  docker-compose.yml  dropbox_token_gen.py  hardhat.config.js  main.py  package-lock.json  push_docker_to_ecs.sh  pyproject.toml  requirements.txt  run_docker.sh  run_kubernetes.sh  run_remote_docker.sh  runtime.txt  service.yaml  settings.py  test.py  truffle-config.js  unitest.py  upload_docker.sh  uswgi.ini  utils.py
.dapr/: values.yaml
.dapr/components/: zipkin.yaml
.github/: codecov.yml  dependabot.yml
.github/workflows/: build_cicd.yml  docker-image.yml
.history/: .env_20231118232124.example  .env_20231128163445  .env_20231128163558.example  requirements_20231128164402.txt  requirements_20231128164605.txt  requirements_20231128164622.txt
.trunk/: trunk.yaml
contracts/: digilocker.sol
dapr_config/: demo_actor.py  demo_actor_client.py  demo_actor_interface.py
deploy/: demo_actor_client.yml  demo_actor_serivce.yml  demo_actor_service.yml  redis.yml
scripts/: deploy.js
static/js/: abi.js  auth.js  base.js  dashboard.js  doc_aprooval.js  registration.js  requester_decryption.js  search_by_docid.js  search_by_user.js  upload_doc.js
templates/components/: footer.html
