[tool.poetry]
name = "digilocker"
version = "0.1.0"
description = "A web3 application for storing and verifying documents"
authors = ["Muhammad Abiodun SULAIMAN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
