[tool.poetry]
name = "digilocker"
version = "0.1.0"
description = "A web3 application for storing and verifying documents"
authors = ["Muhammad Abiodun SULAIMAN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
